Judge/Temporary_Error/292.log
In file included from code.cpp:1:0:
../../data/1000/1000_1.out:1:1: error: expected unqualified-id before numeric constant
 0
 ^
